--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,6 @@
 @layer base {
   * {
     border-color: var(--border);
-    outline-color: color-mix(in srgb, var(--ring) 50%, transparent);
   }
 
   body {
@@ -275,7 +274,6 @@ html {
 .trusted-scroll-menu .scroll-container {
   display: flex;
   overflow-x: hidden;
-  scrollbar-width: none;
   -ms-overflow-style: none;
 }
 
@@ -289,4 +287,9 @@ html {
 
 .trusted-scroll-menu .react-horizontal-scrolling-menu--wrapper {
   position: relative;
+}
+
+.bg-pattern {
+  background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='1'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-size: 60px 60px;
 }
